<resources>
    <string name="app_name">Taste Smart</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Enter you password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_enter_email">Please enter an email</string>
    <string name="please_enter_full_name">Please enter your full name</string>
    <string name="error">Error!</string>
    <string name="please_wait">Please wait...</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="full_name">Full Name</string>
    <string name="add_from_gallery">Add From Gallery</string>
    <string name="take_a_photo">Take A Photo</string>
    <string name="please_enter_pass">Please enter your password</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="what_is_on_your_mind">Click to share a new restaurant review…</string>
    <string name="create_post">Create Post</string>
    <string name="update">Update</string>
    <string name="please_enter_description">Please enter description</string>
    <string name="sign_out">Sign Out</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="alarm">Alarm!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="show_my_post">Show My Posts Only</string>
    <string name="my_Location">My Location</string>
    <string name="dont_have_account">Don\'t have an account? Please click here to create!</string>
    <string name="field_missing">This field is mandatory.</string>
    <string name="my_posts">My Posts</string>
    <string name="posts_i_liked">Posts I liked</string>
    <string name="title_activity_posts">PostsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor
        egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora
        torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero
        aliquet, imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a condimentum egestas, turpis nisl
        iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada fames ac
        ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus.
        Sed maximus nisl nec dolor bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at, mollis non turpis. Nullam pretium
        libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer interdum
        nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui.
        Suspendisse sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor sed facilisis varius, nibh
        orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In eros
        nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est
        auctor tincidunt. Sed non viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat diam.
        Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In volutpat arcu ut
        felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper, libero justo
        consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare
        nulla. Donec rhoncus libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce dictum
        libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="update_post">Update Post</string>
    <string name="there_are_no_post_to_display">There are no posts to display.</string>
</resources>