<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/enter_your_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="?colorPrimary"
                    android:textColorHint="?colorPrimary"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/email_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/please_enter_email"
                android:textColor="@color/red"
                android:visibility="gone" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="?colorPrimary"
                    android:textColorHint="?colorPrimary"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pass_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_pass"
                android:textColor="@color/red"
                android:visibility="gone" />

<!--            <androidx.appcompat.widget.AppCompatTextView-->
<!--                android:id="@+id/forget_password"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/forget_password"-->
<!--                android:textColor="@color/blue"-->
<!--                android:textSize="16dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:textStyle="bold"-->
<!--                android:layout_gravity="end"-->
<!--                android:visibility="visible" />-->

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:cornerRadius="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:text="@string/sign_in" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_height="70dp"
            app:cornerRadius="30dp"
            android:layout_gravity="center"
            android:text="@string/sign_up" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>