<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_or_update_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.CreateOrUpdatePostFragment"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">


        <ImageView
            android:id="@+id/close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/baseline_close_24"/>

        <TextView
            android:text="@string/create_post"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/save"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/dark_grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="60dp"
            android:layout_height="60dp"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:background="@drawable/border"
        android:layout_height="150dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_is_on_your_mind"/>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content"
            android:background="@null"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@drawable/baseline_camera_alt_24"/>

        <ImageView
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@drawable/baseline_attach_file_24"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/post_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"/>




</LinearLayout>