<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_grey"
    android:padding="16dp">

    <ImageView
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_edit_24"
        android:layout_gravity="end"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        android:src="@drawable/baseline_person_24" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:id="@+id/email"
        android:textSize="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:paddingHorizontal="8dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp"
        android:paddingVertical="8dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/my_posts"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:text="@string/my_posts"/>

        <ImageView
            android:src="@drawable/baseline_arrow_right_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:paddingHorizontal="8dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp"
        android:paddingVertical="8dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/liked_posts"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:text="@string/posts_i_liked"/>

        <ImageView
            android:src="@drawable/baseline_arrow_right_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:paddingHorizontal="8dp"
        android:gravity="center_vertical"
        android:paddingVertical="8dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/log_out"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/sign_out"/>

        <ImageView
            android:src="@drawable/baseline_arrow_right_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>